PYI-358 (PYI-273) - Implement token endpoint